--- a/.github/workflows/hubtel-test.yml
+++ b/.github/workflows/hubtel-test.yml
@@ -12,29 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '16'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
+
+      - name: Run Cypress tests
+        run: npm test
 
       - name: Download Allure History Artifact
         uses: actions/download-artifact@v3
         with:
           name: allure-results-history
-          path: allure-results-history
+          path: allure-results/history
         continue-on-error: true
-
-      - name: Run Cypress Tests
-        run: npm run test
-
-      - name: Generate Allure Report
-        run: npm run allure:report
 
       - name: Save Allure History
         run: |
@@ -48,9 +45,12 @@ jobs:
           name: allure-results-history
           path: allure-results-history
 
+      - name: Generate Allure Report
+        run: |
+          allure generate allure-results --clean -o allure-report
+          
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./allure-report
-          keep_files: false
