--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mocha-allure-reporter": "^1.4.0"
   },
   "scripts": {
-    "allure:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "allure:report": "allure generate allure-results --clean -o allure-report ",
+    "allure:open":"allure open allure-report",
     "cypress:open": "cypress open",
     "test": "cypress run",
     "browser:chrome": "npx cypress run --browser=chrome --headed --spec cypress/e2e/hubtel-blog-test.cy.js --reporter mocha-allure-reporter"
