--- a/.github/workflows/hubtel-test.yml
+++ b/.github/workflows/hubtel-test.yml
@@ -48,7 +48,7 @@ jobs:
 
       # Generate Allure report
       - name: Generate Allure Report
-        run: npm run allure generate allure-results --clean -o allure-report
+        run: npm run allure:report
 
       # Save Allure history
       - name: Save Allure History
