--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "allure:report": "allure generate allure-results --clean -o allure-report ",
     "allure:open":"allure open allure-report",
     "cypress:open": "cypress open",
+    "deploy": "gh-pages -d allure-report",
     "test": "cypress run",
     "browser:chrome": "npx cypress run --browser=chrome --headed --spec cypress/e2e/hubtel-blog-test.cy.js --reporter mocha-allure-reporter"
   },
