--- a/.github/workflows/hubtel-test.yml
+++ b/.github/workflows/hubtel-test.yml
@@ -1,71 +1,51 @@
-# This is a workflow for running Cypress tests, managing Allure report history, and deploying the Allure report
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Node.js environment
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '16'
 
-      # Install dependencies
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
 
-      # Download Allure History Artifact if it exists
+      - name: Run Cypress tests
+        run: npm test
+
       - name: Download Allure History Artifact
         uses: actions/download-artifact@v3
         with:
           name: allure-results-history
-          path: allure-results-history
+          path: allure-results/history
         continue-on-error: true
 
-      # Run Cypress tests
-      - name: Run Cypress Tests
-        run: npm run test
-
-      # Generate Allure report
-      - name: Generate Allure Report
-        run: npm run allure:report
-
-      # Save Allure history
       - name: Save Allure History
         run: |
           echo "Saving Allure history..."
-          mkdir -p allure-results-history
-          cp -r allure-results/history allure-results-history
+          mkdir -p allure-results/history
+          cp -r allure-results-history/history allure-results/history
 
-      # Upload Allure History Artifact
-      - name: Upload Allure History Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: allure-results-history
-          path: allure-results-history
+      - name: Generate Allure Report
+        run: allure generate allure-results --clean -o allure-report
 
-      # Deploy Allure report to GitHub Pages
       - name: Deploy Allure Report to GitHub Pages
-        run: npm run deploy
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Actions token for deployment
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-report
